--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,8 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
+/.editorconfig
+package-lock.json
 
 # Visual Studio Code
 .vscode/*
@@ -30,6 +32,7 @@ yarn-error.log
 
 # Miscellaneous
 /.angular/cache
+/.vscode
 .sass-cache/
 /connect.lock
 /coverage
