--- a/.gitignore
+++ b/.gitignore
@@ -19,19 +19,14 @@ yarn-error.log
 *.launch
 .settings/
 *.sublime-workspace
-/.editorconfig
-package-lock.json
+.editorconfig
 
 # Visual Studio Code
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
 .history/*
+.vscode
 
 # Miscellaneous
-/.angular/cache
+/.angular
 /.vscode
 .sass-cache/
 /connect.lock
